// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<RouteStopsTable /> Renders the route with stops along its geometry 1`] = `
<DocumentFragment>
  <div>
    <div
      class="flex items-center"
    >
      <label
        class="my-8 mr-8 font-normal"
        id="headlessui-label-:r0:"
      >
        Näytä reittiin kuulumattomat pysäkit
      </label>
      <button
        aria-checked="false"
        aria-labelledby="headlessui-label-:r0:"
        class=" border-grey relative inline-flex h-6 w-11 items-center rounded-full border transition-colors"
        data-testid="show-unused-stops-switch"
        id="headlessui-switch-:r1:"
        role="switch"
        tabindex="0"
        type="button"
      >
        <span
          class="-translate-x-1 border-grey inline-block h-6 w-6 transform rounded-full border bg-white transition-transform"
        />
      </button>
    </div>
    <table
      class="h-1 w-full "
      data-testid="routeStopsTable1"
    >
      <tbody
        class=""
      >
        <tr
          class="border border-white bg-background  p-4"
          data-testid="RouteStopsHeaderRow::65 itään"
        >
          <td
            class="border-l-10 border-hsl-dark-green p-4 pl-12"
          >
            <div
              class="flex flex-row items-center"
            >
              <span
                class="relative flex h-9 w-9 items-center justify-center bg-brand text-2xl font-bold text-white mr-4"
              >
                <span
                  data-testid="DirectionBadge::value"
                >
                  1
                </span>
              </span>
              <span
                class="text-xl"
                data-testid="RouteStopsHeaderRow::label"
              >
                <b>
                  65 itään
                </b>
              </span>
            </div>
          </td>
          <td
            class="py-4"
          >
            <div
              class="flex flex-row items-center"
            >
              <span
                class="text-xl"
                data-testid="RouteStopsHeaderRow::name"
              >
                Reitti A - B FI
              </span>
              <a
                data-testid="RouteStopsHeaderRow::editRouteButton::Reitti A - B FI"
                href="/routes/03d55414-e5cf-4cce-9faf-d86ccb7e5f98/edit?observationDate=2017-02-14"
              >
                <div
                  class="ml-5 flex h-10 w-10 items-center justify-center rounded-full border border-grey bg-white hover:border-2 hover:border-tweaked-brand"
                >
                  <svg
                    class="text-2xl text-tweaked-brand"
                    fill="currentColor"
                    height="1em"
                    stroke="currentColor"
                    stroke-width="0"
                    viewBox="0 0 24 24"
                    width="1em"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M0 0h24v24H0z"
                      fill="none"
                    />
                    <path
                      d="M3 17.25V21h3.75L17.81 9.94l-3.75-3.75L3 17.25zM20.71 7.04a.996.996 0 000-1.41l-2.34-2.34a.996.996 0 00-1.41 0l-1.83 1.83 3.75 3.75 1.83-1.83z"
                    />
                  </svg>
                </div>
              </a>
            </div>
          </td>
          <td
            class="p-4"
            data-testid="RouteStopsHeaderRow::validityPeriod"
          >
            <div
              class="flex flex-row items-center justify-end"
            >
              Voimassa 1.1.2021 - 13.12.2023
            </div>
          </td>
          <td
            class="p-4"
          >
            <div
              class="flex flex-row items-center justify-end"
            >
              <span
                data-testid="RouteStopsHeaderRow::lastEdited"
              >
                !14.2.2017 14.51
              </span>
              <svg
                class="ml-2 inline text-xl text-tweaked-brand"
                fill="currentColor"
                height="1em"
                stroke="currentColor"
                stroke-width="0"
                viewBox="0 0 24 24"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M0 0h24v24H0z"
                  fill="none"
                />
                <path
                  d="M13 3a9 9 0 00-9 9H1l3.89 3.89.07.14L9 12H6c0-3.87 3.13-7 7-7s7 3.13 7 7-3.13 7-7 7c-1.93 0-3.68-.79-4.94-2.06l-1.42 1.42A8.954 8.954 0 0013 21a9 9 0 000-18zm-1 5v5l4.28 2.54.72-1.21-3.5-2.08V8H12z"
                />
              </svg>
            </div>
          </td>
          <td
            class="w-20 border-l-4 border-r-4 border-white text-center"
          >
            <div
              class="group relative flex justify-center"
            >
              <span
                class="absolute z-10 w-max scale-0 rounded-md bg-dark-grey p-2 text-xs 
        text-white transition-all group-hover:scale-100 bottom-11 delay-700"
              >
                Näytä kartalla
              </span>
              <button
                class="text-center h-10 w-10 rounded-full border border-grey bg-white text-tweaked-brand hover:border-2 hover:border-tweaked-brand  "
                data-testid="RouteStopsHeaderRow::showRouteButton"
                type="button"
              >
                <svg
                  class="text-2xl inline text-center"
                  fill="currentColor"
                  height="1em"
                  stroke="currentColor"
                  stroke-width="0"
                  viewBox="0 0 24 24"
                  width="1em"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M0 0h24v24H0z"
                    fill="none"
                  />
                  <path
                    d="M18 8c0-3.31-2.69-6-6-6S6 4.69 6 8c0 4.5 6 11 6 11s6-6.5 6-11zm-8 0c0-1.1.9-2 2-2s2 .9 2 2a2 2 0 11-4 0zM5 20v2h14v-2H5z"
                  />
                </svg>
              </button>
            </div>
          </td>
          <td
            class="w-20"
          >
            <button
              class="text-center h-full w-full"
              data-testid="RouteStopsHeaderRow::toggleAccordion"
              type="button"
            >
              <svg
                class="text-3xl text-tweaked-brand text-3xl  inline text-center"
                fill="currentColor"
                height="1em"
                stroke="currentColor"
                stroke-width="0"
                viewBox="0 0 24 24"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M0 0h24v24H0V0z"
                  fill="none"
                />
                <path
                  d="M7.41 8.59L12 13.17l4.59-4.58L18 10l-6 6-6-6 1.41-1.41z"
                />
              </svg>
            </button>
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</DocumentFragment>
`;

exports[`<RouteStopsTable /> Renders the route with stops along its geometry 2`] = `
<DocumentFragment>
  <div>
    <div
      class="flex items-center"
    >
      <label
        class="my-8 mr-8 font-normal"
        id="headlessui-label-:r0:"
      >
        Näytä reittiin kuulumattomat pysäkit
      </label>
      <button
        aria-checked="false"
        aria-labelledby="headlessui-label-:r0:"
        class=" border-grey relative inline-flex h-6 w-11 items-center rounded-full border transition-colors"
        data-testid="show-unused-stops-switch"
        id="headlessui-switch-:r1:"
        role="switch"
        tabindex="0"
        type="button"
      >
        <span
          class="-translate-x-1 border-grey inline-block h-6 w-6 transform rounded-full border bg-white transition-transform"
        />
      </button>
    </div>
    <table
      class="h-1 w-full "
      data-testid="routeStopsTable1"
    >
      <tbody
        class=""
      >
        <tr
          class="border border-white bg-background  p-4"
          data-testid="RouteStopsHeaderRow::65 itään"
        >
          <td
            class="border-l-10 border-hsl-dark-green p-4 pl-12"
          >
            <div
              class="flex flex-row items-center"
            >
              <span
                class="relative flex h-9 w-9 items-center justify-center bg-brand text-2xl font-bold text-white mr-4"
              >
                <span
                  data-testid="DirectionBadge::value"
                >
                  1
                </span>
              </span>
              <span
                class="text-xl"
                data-testid="RouteStopsHeaderRow::label"
              >
                <b>
                  65 itään
                </b>
              </span>
            </div>
          </td>
          <td
            class="py-4"
          >
            <div
              class="flex flex-row items-center"
            >
              <span
                class="text-xl"
                data-testid="RouteStopsHeaderRow::name"
              >
                Reitti A - B FI
              </span>
              <a
                data-testid="RouteStopsHeaderRow::editRouteButton::Reitti A - B FI"
                href="/routes/03d55414-e5cf-4cce-9faf-d86ccb7e5f98/edit?observationDate=2017-02-14"
              >
                <div
                  class="ml-5 flex h-10 w-10 items-center justify-center rounded-full border border-grey bg-white hover:border-2 hover:border-tweaked-brand"
                >
                  <svg
                    class="text-2xl text-tweaked-brand"
                    fill="currentColor"
                    height="1em"
                    stroke="currentColor"
                    stroke-width="0"
                    viewBox="0 0 24 24"
                    width="1em"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M0 0h24v24H0z"
                      fill="none"
                    />
                    <path
                      d="M3 17.25V21h3.75L17.81 9.94l-3.75-3.75L3 17.25zM20.71 7.04a.996.996 0 000-1.41l-2.34-2.34a.996.996 0 00-1.41 0l-1.83 1.83 3.75 3.75 1.83-1.83z"
                    />
                  </svg>
                </div>
              </a>
            </div>
          </td>
          <td
            class="p-4"
            data-testid="RouteStopsHeaderRow::validityPeriod"
          >
            <div
              class="flex flex-row items-center justify-end"
            >
              Voimassa 1.1.2021 - 13.12.2023
            </div>
          </td>
          <td
            class="p-4"
          >
            <div
              class="flex flex-row items-center justify-end"
            >
              <span
                data-testid="RouteStopsHeaderRow::lastEdited"
              >
                !14.2.2017 14.51
              </span>
              <svg
                class="ml-2 inline text-xl text-tweaked-brand"
                fill="currentColor"
                height="1em"
                stroke="currentColor"
                stroke-width="0"
                viewBox="0 0 24 24"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M0 0h24v24H0z"
                  fill="none"
                />
                <path
                  d="M13 3a9 9 0 00-9 9H1l3.89 3.89.07.14L9 12H6c0-3.87 3.13-7 7-7s7 3.13 7 7-3.13 7-7 7c-1.93 0-3.68-.79-4.94-2.06l-1.42 1.42A8.954 8.954 0 0013 21a9 9 0 000-18zm-1 5v5l4.28 2.54.72-1.21-3.5-2.08V8H12z"
                />
              </svg>
            </div>
          </td>
          <td
            class="w-20 border-l-4 border-r-4 border-white text-center"
          >
            <div
              class="group relative flex justify-center"
            >
              <span
                class="absolute z-10 w-max scale-0 rounded-md bg-dark-grey p-2 text-xs 
        text-white transition-all group-hover:scale-100 bottom-11 delay-700"
              >
                Näytä kartalla
              </span>
              <button
                class="text-center h-10 w-10 rounded-full border border-grey bg-white text-tweaked-brand hover:border-2 hover:border-tweaked-brand  "
                data-testid="RouteStopsHeaderRow::showRouteButton"
                type="button"
              >
                <svg
                  class="text-2xl inline text-center"
                  fill="currentColor"
                  height="1em"
                  stroke="currentColor"
                  stroke-width="0"
                  viewBox="0 0 24 24"
                  width="1em"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M0 0h24v24H0z"
                    fill="none"
                  />
                  <path
                    d="M18 8c0-3.31-2.69-6-6-6S6 4.69 6 8c0 4.5 6 11 6 11s6-6.5 6-11zm-8 0c0-1.1.9-2 2-2s2 .9 2 2a2 2 0 11-4 0zM5 20v2h14v-2H5z"
                  />
                </svg>
              </button>
            </div>
          </td>
          <td
            class="w-20"
          >
            <button
              class="text-center h-full w-full"
              data-testid="RouteStopsHeaderRow::toggleAccordion"
              type="button"
            >
              <svg
                class="text-3xl text-tweaked-brand text-3xl inline text-center"
                fill="currentColor"
                height="1em"
                stroke="currentColor"
                stroke-width="0"
                viewBox="0 0 24 24"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M0 0h24v24H0z"
                  fill="none"
                />
                <path
                  d="M7.41 15.41L12 10.83l4.59 4.58L18 14l-6-6-6 6z"
                />
              </svg>
            </button>
          </td>
        </tr>
        <tr
          class="border border-l-8  "
          data-testid="RouteStopsRow::pysäkki A"
        >
          <td
            class="border-l-10 border-hsl-dark-green p-4 pl-16 text-2xl"
            data-testid="RouteStopsRow::label"
          >
            pysäkki A
          </td>
          <td
            class="w-auto"
            data-testid="RouteStopsRow::name"
          >
            <div
              class="flex flex-row items-center"
            >
              <span>
                !Pysäkki X
              </span>
            </div>
          </td>
          <td
            class="p-4"
            data-testid="RouteStopsRow::validityPeriod"
          >
            <div
              class="flex flex-row items-center justify-end"
            >
              Voimassa 1.1.2000 - 13.12.2050
            </div>
          </td>
          <td
            class="p-4"
          >
            <div
              class="flex flex-row items-center justify-end"
            >
              <span
                data-testid="RouteStopsRow::lastEdited"
              >
                !14.2.2017 14.51
              </span>
              <svg
                class="ml-2 inline text-xl text-tweaked-brand"
                fill="currentColor"
                height="1em"
                stroke="currentColor"
                stroke-width="0"
                viewBox="0 0 24 24"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M0 0h24v24H0z"
                  fill="none"
                />
                <path
                  d="M13 3a9 9 0 00-9 9H1l3.89 3.89.07.14L9 12H6c0-3.87 3.13-7 7-7s7 3.13 7 7-3.13 7-7 7c-1.93 0-3.68-.79-4.94-2.06l-1.42 1.42A8.954 8.954 0 0013 21a9 9 0 000-18zm-1 5v5l4.28 2.54.72-1.21-3.5-2.08V8H12z"
                />
              </svg>
            </div>
          </td>
          <td>
             
          </td>
          <td>
            <div
              class="relative"
            >
              <button
                aria-expanded="false"
                aria-haspopup="true"
                class="mx-auto flex items-center px-3 focus:outline-none"
                data-testid="StopActionsDrowdown::menu"
                id="headlessui-menu-button-:r2:"
                type="button"
              >
                <svg
                  class="text-3xl"
                  fill="currentColor"
                  height="1em"
                  stroke="currentColor"
                  stroke-width="0"
                  viewBox="0 0 24 24"
                  width="1em"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M0 0h24v24H0z"
                    fill="none"
                  />
                  <path
                    d="M12 8c1.1 0 2-.9 2-2s-.9-2-2-2-2 .9-2 2 .9 2 2 2zm0 2c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2zm0 6c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2z"
                  />
                </svg>
              </button>
            </div>
          </td>
        </tr>
        <tr
          class="border border-l-8  "
          data-testid="RouteStopsRow::pysäkki C"
        >
          <td
            class="border-l-10 border-hsl-dark-green p-4 pl-16 text-2xl"
            data-testid="RouteStopsRow::label"
          >
            pysäkki C
          </td>
          <td
            class="w-auto"
            data-testid="RouteStopsRow::name"
          >
            <div
              class="flex flex-row items-center"
            >
              <span>
                !Pysäkki X
              </span>
            </div>
          </td>
          <td
            class="p-4"
            data-testid="RouteStopsRow::validityPeriod"
          >
            <div
              class="flex flex-row items-center justify-end"
            >
              Voimassa 1.1.2000 - 13.12.2050
            </div>
          </td>
          <td
            class="p-4"
          >
            <div
              class="flex flex-row items-center justify-end"
            >
              <span
                data-testid="RouteStopsRow::lastEdited"
              >
                !14.2.2017 14.51
              </span>
              <svg
                class="ml-2 inline text-xl text-tweaked-brand"
                fill="currentColor"
                height="1em"
                stroke="currentColor"
                stroke-width="0"
                viewBox="0 0 24 24"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M0 0h24v24H0z"
                  fill="none"
                />
                <path
                  d="M13 3a9 9 0 00-9 9H1l3.89 3.89.07.14L9 12H6c0-3.87 3.13-7 7-7s7 3.13 7 7-3.13 7-7 7c-1.93 0-3.68-.79-4.94-2.06l-1.42 1.42A8.954 8.954 0 0013 21a9 9 0 000-18zm-1 5v5l4.28 2.54.72-1.21-3.5-2.08V8H12z"
                />
              </svg>
            </div>
          </td>
          <td>
             
          </td>
          <td>
            <div
              class="relative"
            >
              <button
                aria-expanded="false"
                aria-haspopup="true"
                class="mx-auto flex items-center px-3 focus:outline-none"
                data-testid="StopActionsDrowdown::menu"
                id="headlessui-menu-button-:r3:"
                type="button"
              >
                <svg
                  class="text-3xl"
                  fill="currentColor"
                  height="1em"
                  stroke="currentColor"
                  stroke-width="0"
                  viewBox="0 0 24 24"
                  width="1em"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M0 0h24v24H0z"
                    fill="none"
                  />
                  <path
                    d="M12 8c1.1 0 2-.9 2-2s-.9-2-2-2-2 .9-2 2 .9 2 2 2zm0 2c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2zm0 6c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2z"
                  />
                </svg>
              </button>
            </div>
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</DocumentFragment>
`;

exports[`<RouteStopsTable /> Renders the route with stops along its geometry 3`] = `
<DocumentFragment>
  <div>
    <div
      class="flex items-center"
    >
      <label
        class="my-8 mr-8 font-normal"
        id="headlessui-label-:r0:"
      >
        Näytä reittiin kuulumattomat pysäkit
      </label>
      <button
        aria-checked="true"
        aria-labelledby="headlessui-label-:r0:"
        class=" border-brand bg-brand relative inline-flex h-6 w-11 items-center rounded-full border transition-colors"
        data-testid="show-unused-stops-switch"
        id="headlessui-switch-:r1:"
        role="switch"
        tabindex="0"
        type="button"
      >
        <span
          class="translate-x-5 border-brand inline-block h-6 w-6 transform rounded-full border bg-white transition-transform"
        />
      </button>
    </div>
    <table
      class="h-1 w-full "
      data-testid="routeStopsTable1"
    >
      <tbody
        class=""
      >
        <tr
          class="border border-white bg-background  p-4"
          data-testid="RouteStopsHeaderRow::65 itään"
        >
          <td
            class="border-l-10 border-hsl-dark-green p-4 pl-12"
          >
            <div
              class="flex flex-row items-center"
            >
              <span
                class="relative flex h-9 w-9 items-center justify-center bg-brand text-2xl font-bold text-white mr-4"
              >
                <span
                  data-testid="DirectionBadge::value"
                >
                  1
                </span>
              </span>
              <span
                class="text-xl"
                data-testid="RouteStopsHeaderRow::label"
              >
                <b>
                  65 itään
                </b>
              </span>
            </div>
          </td>
          <td
            class="py-4"
          >
            <div
              class="flex flex-row items-center"
            >
              <span
                class="text-xl"
                data-testid="RouteStopsHeaderRow::name"
              >
                Reitti A - B FI
              </span>
              <a
                data-testid="RouteStopsHeaderRow::editRouteButton::Reitti A - B FI"
                href="/routes/03d55414-e5cf-4cce-9faf-d86ccb7e5f98/edit?observationDate=2017-02-14"
              >
                <div
                  class="ml-5 flex h-10 w-10 items-center justify-center rounded-full border border-grey bg-white hover:border-2 hover:border-tweaked-brand"
                >
                  <svg
                    class="text-2xl text-tweaked-brand"
                    fill="currentColor"
                    height="1em"
                    stroke="currentColor"
                    stroke-width="0"
                    viewBox="0 0 24 24"
                    width="1em"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M0 0h24v24H0z"
                      fill="none"
                    />
                    <path
                      d="M3 17.25V21h3.75L17.81 9.94l-3.75-3.75L3 17.25zM20.71 7.04a.996.996 0 000-1.41l-2.34-2.34a.996.996 0 00-1.41 0l-1.83 1.83 3.75 3.75 1.83-1.83z"
                    />
                  </svg>
                </div>
              </a>
            </div>
          </td>
          <td
            class="p-4"
            data-testid="RouteStopsHeaderRow::validityPeriod"
          >
            <div
              class="flex flex-row items-center justify-end"
            >
              Voimassa 1.1.2021 - 13.12.2023
            </div>
          </td>
          <td
            class="p-4"
          >
            <div
              class="flex flex-row items-center justify-end"
            >
              <span
                data-testid="RouteStopsHeaderRow::lastEdited"
              >
                !14.2.2017 14.51
              </span>
              <svg
                class="ml-2 inline text-xl text-tweaked-brand"
                fill="currentColor"
                height="1em"
                stroke="currentColor"
                stroke-width="0"
                viewBox="0 0 24 24"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M0 0h24v24H0z"
                  fill="none"
                />
                <path
                  d="M13 3a9 9 0 00-9 9H1l3.89 3.89.07.14L9 12H6c0-3.87 3.13-7 7-7s7 3.13 7 7-3.13 7-7 7c-1.93 0-3.68-.79-4.94-2.06l-1.42 1.42A8.954 8.954 0 0013 21a9 9 0 000-18zm-1 5v5l4.28 2.54.72-1.21-3.5-2.08V8H12z"
                />
              </svg>
            </div>
          </td>
          <td
            class="w-20 border-l-4 border-r-4 border-white text-center"
          >
            <div
              class="group relative flex justify-center"
            >
              <span
                class="absolute z-10 w-max scale-0 rounded-md bg-dark-grey p-2 text-xs 
        text-white transition-all group-hover:scale-100 bottom-11 delay-700"
              >
                Näytä kartalla
              </span>
              <button
                class="text-center h-10 w-10 rounded-full border border-grey bg-white text-tweaked-brand hover:border-2 hover:border-tweaked-brand  "
                data-testid="RouteStopsHeaderRow::showRouteButton"
                type="button"
              >
                <svg
                  class="text-2xl inline text-center"
                  fill="currentColor"
                  height="1em"
                  stroke="currentColor"
                  stroke-width="0"
                  viewBox="0 0 24 24"
                  width="1em"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M0 0h24v24H0z"
                    fill="none"
                  />
                  <path
                    d="M18 8c0-3.31-2.69-6-6-6S6 4.69 6 8c0 4.5 6 11 6 11s6-6.5 6-11zm-8 0c0-1.1.9-2 2-2s2 .9 2 2a2 2 0 11-4 0zM5 20v2h14v-2H5z"
                  />
                </svg>
              </button>
            </div>
          </td>
          <td
            class="w-20"
          >
            <button
              class="text-center h-full w-full"
              data-testid="RouteStopsHeaderRow::toggleAccordion"
              type="button"
            >
              <svg
                class="text-3xl text-tweaked-brand text-3xl inline text-center"
                fill="currentColor"
                height="1em"
                stroke="currentColor"
                stroke-width="0"
                viewBox="0 0 24 24"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M0 0h24v24H0z"
                  fill="none"
                />
                <path
                  d="M7.41 15.41L12 10.83l4.59 4.58L18 14l-6-6-6 6z"
                />
              </svg>
            </button>
          </td>
        </tr>
        <tr
          class="border border-l-8  "
          data-testid="RouteStopsRow::pysäkki A"
        >
          <td
            class="border-l-10 border-hsl-dark-green p-4 pl-16 text-2xl"
            data-testid="RouteStopsRow::label"
          >
            pysäkki A
          </td>
          <td
            class="w-auto"
            data-testid="RouteStopsRow::name"
          >
            <div
              class="flex flex-row items-center"
            >
              <span>
                !Pysäkki X
              </span>
            </div>
          </td>
          <td
            class="p-4"
            data-testid="RouteStopsRow::validityPeriod"
          >
            <div
              class="flex flex-row items-center justify-end"
            >
              Voimassa 1.1.2000 - 13.12.2050
            </div>
          </td>
          <td
            class="p-4"
          >
            <div
              class="flex flex-row items-center justify-end"
            >
              <span
                data-testid="RouteStopsRow::lastEdited"
              >
                !14.2.2017 14.51
              </span>
              <svg
                class="ml-2 inline text-xl text-tweaked-brand"
                fill="currentColor"
                height="1em"
                stroke="currentColor"
                stroke-width="0"
                viewBox="0 0 24 24"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M0 0h24v24H0z"
                  fill="none"
                />
                <path
                  d="M13 3a9 9 0 00-9 9H1l3.89 3.89.07.14L9 12H6c0-3.87 3.13-7 7-7s7 3.13 7 7-3.13 7-7 7c-1.93 0-3.68-.79-4.94-2.06l-1.42 1.42A8.954 8.954 0 0013 21a9 9 0 000-18zm-1 5v5l4.28 2.54.72-1.21-3.5-2.08V8H12z"
                />
              </svg>
            </div>
          </td>
          <td>
             
          </td>
          <td>
            <div
              class="relative"
            >
              <button
                aria-expanded="false"
                aria-haspopup="true"
                class="mx-auto flex items-center px-3 focus:outline-none"
                data-testid="StopActionsDrowdown::menu"
                id="headlessui-menu-button-:r2:"
                type="button"
              >
                <svg
                  class="text-3xl"
                  fill="currentColor"
                  height="1em"
                  stroke="currentColor"
                  stroke-width="0"
                  viewBox="0 0 24 24"
                  width="1em"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M0 0h24v24H0z"
                    fill="none"
                  />
                  <path
                    d="M12 8c1.1 0 2-.9 2-2s-.9-2-2-2-2 .9-2 2 .9 2 2 2zm0 2c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2zm0 6c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2z"
                  />
                </svg>
              </button>
            </div>
          </td>
        </tr>
        <tr
          class="border border-l-8 bg-background text-dark-grey "
          data-testid="RouteStopsRow::pysäkki B"
        >
          <td
            class="border-l-10 border-hsl-dark-green p-4 pl-16 text-2xl"
            data-testid="RouteStopsRow::label"
          >
            pysäkki B
          </td>
          <td
            class="w-auto"
            data-testid="RouteStopsRow::name"
          >
            <div
              class="flex flex-row items-center"
            >
              <span>
                !Pysäkki X
              </span>
            </div>
          </td>
          <td
            class="p-4"
            data-testid="RouteStopsRow::validityPeriod"
          >
            <div
              class="flex flex-row items-center justify-end"
            >
              Ei reitin käytössä
            </div>
          </td>
          <td
            class="p-4"
          >
            <div
              class="flex flex-row items-center justify-end"
            >
              <span
                data-testid="RouteStopsRow::lastEdited"
              >
                !14.2.2017 14.51
              </span>
              <svg
                class="ml-2 inline text-xl text-tweaked-brand"
                fill="currentColor"
                height="1em"
                stroke="currentColor"
                stroke-width="0"
                viewBox="0 0 24 24"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M0 0h24v24H0z"
                  fill="none"
                />
                <path
                  d="M13 3a9 9 0 00-9 9H1l3.89 3.89.07.14L9 12H6c0-3.87 3.13-7 7-7s7 3.13 7 7-3.13 7-7 7c-1.93 0-3.68-.79-4.94-2.06l-1.42 1.42A8.954 8.954 0 0013 21a9 9 0 000-18zm-1 5v5l4.28 2.54.72-1.21-3.5-2.08V8H12z"
                />
              </svg>
            </div>
          </td>
          <td>
             
          </td>
          <td>
            <div
              class="relative"
            >
              <button
                aria-expanded="false"
                aria-haspopup="true"
                class="mx-auto flex items-center px-3 focus:outline-none"
                data-testid="StopActionsDrowdown::menu"
                id="headlessui-menu-button-:r4:"
                type="button"
              >
                <svg
                  class="text-3xl"
                  fill="currentColor"
                  height="1em"
                  stroke="currentColor"
                  stroke-width="0"
                  viewBox="0 0 24 24"
                  width="1em"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M0 0h24v24H0z"
                    fill="none"
                  />
                  <path
                    d="M12 8c1.1 0 2-.9 2-2s-.9-2-2-2-2 .9-2 2 .9 2 2 2zm0 2c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2zm0 6c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2z"
                  />
                </svg>
              </button>
            </div>
          </td>
        </tr>
        <tr
          class="border border-l-8  "
          data-testid="RouteStopsRow::pysäkki C"
        >
          <td
            class="border-l-10 border-hsl-dark-green p-4 pl-16 text-2xl"
            data-testid="RouteStopsRow::label"
          >
            pysäkki C
          </td>
          <td
            class="w-auto"
            data-testid="RouteStopsRow::name"
          >
            <div
              class="flex flex-row items-center"
            >
              <span>
                !Pysäkki X
              </span>
            </div>
          </td>
          <td
            class="p-4"
            data-testid="RouteStopsRow::validityPeriod"
          >
            <div
              class="flex flex-row items-center justify-end"
            >
              Voimassa 1.1.2000 - 13.12.2050
            </div>
          </td>
          <td
            class="p-4"
          >
            <div
              class="flex flex-row items-center justify-end"
            >
              <span
                data-testid="RouteStopsRow::lastEdited"
              >
                !14.2.2017 14.51
              </span>
              <svg
                class="ml-2 inline text-xl text-tweaked-brand"
                fill="currentColor"
                height="1em"
                stroke="currentColor"
                stroke-width="0"
                viewBox="0 0 24 24"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M0 0h24v24H0z"
                  fill="none"
                />
                <path
                  d="M13 3a9 9 0 00-9 9H1l3.89 3.89.07.14L9 12H6c0-3.87 3.13-7 7-7s7 3.13 7 7-3.13 7-7 7c-1.93 0-3.68-.79-4.94-2.06l-1.42 1.42A8.954 8.954 0 0013 21a9 9 0 000-18zm-1 5v5l4.28 2.54.72-1.21-3.5-2.08V8H12z"
                />
              </svg>
            </div>
          </td>
          <td>
             
          </td>
          <td>
            <div
              class="relative"
            >
              <button
                aria-expanded="false"
                aria-haspopup="true"
                class="mx-auto flex items-center px-3 focus:outline-none"
                data-testid="StopActionsDrowdown::menu"
                id="headlessui-menu-button-:r5:"
                type="button"
              >
                <svg
                  class="text-3xl"
                  fill="currentColor"
                  height="1em"
                  stroke="currentColor"
                  stroke-width="0"
                  viewBox="0 0 24 24"
                  width="1em"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M0 0h24v24H0z"
                    fill="none"
                  />
                  <path
                    d="M12 8c1.1 0 2-.9 2-2s-.9-2-2-2-2 .9-2 2 .9 2 2 2zm0 2c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2zm0 6c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2z"
                  />
                </svg>
              </button>
            </div>
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</DocumentFragment>
`;
